gitops/k8s-manifests/server2/influxdb2/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: influxdb2
  namespace: iot
  annotations:
    argocd.argoproj.io/sync-wave: "100"
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - influx.server2.homelab.irha.cz
  rules:
    - backendRefs:
        - name: influxdb2
          namespace: iot
          port: 80
